<resources>
    <string name="app_name">FunAccount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_fail">记账失败</string>
    <string name="add_success">已记录</string>
    <string name="check_input">请检查填写情况</string>
    <string name="money_input_check">您填写的金额不合理</string>
    <string name="this_week">本周</string>
    <string name="this_month">本月</string>
    <string name="this_year">今年</string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">抱歉 用户名或密码不对 登录失败</string>
    <string name="account_remove_success">您的账号已成功注销</string>
    <string name="account_remove_fail">注销失败，请重试</string>
    <string name="user_name_empty">用户名不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="username_repeat">用户名已存在</string>
    <string name="password_different">两次输入不一致</string>
    <string name="logup_fail">注册失败</string>
    <string name="logup_success">注册成功</string>
    <string name="password_check_empty">请再次输入密码</string>
    <string name="reset_fail">修改失败</string>
    <string name="reset_success">您已修改密码</string>
    <string name="user_check_false">用户名或密码有误，请重新输入</string>
    <string name="username_inexistence">用户名不存在</string>
    <string name="income">收入</string>
    <string name="expend">支出</string>
    <string name="baidu_url">https://www.baidu.com/</string>
    <string name="start_connect_by_subscribe">开始采用subscribe连接</string>
    <string name="post_fail">发送请求失败</string>
    <string name="success">成功</string>
    <string name="budget_center">预算中心</string>
    <string name="advanced_function">高级功能</string>
    <string name="other_setting">其他设置</string>
    <string name="account_setting">账号设置</string>
    <string name="common_problems">常见问题</string>
    <string name="good_reputation">好评鼓励</string>
    <string name="about_us">关于我们</string>
    <string name="all_bill_text">全部账单</string>
    <string name="expend_name">支出:</string>
    <string name="income_name">收入:</string>
    <string name="yuan">元</string>
    <string name="delete">删除</string>
    <string name="delete_fail">删除失败</string>
    <string name="delete_bill_success">成功删除该账单</string>
    <string name="money_name">金额:</string>
    <string name="please_input_money">请输入金额</string>
    <string name="type_name">类型:</string>
    <string name="please_input_type">请输入类型</string>
    <string name="remark_name">备注:</string>
    <string name="please_input_remark">请输入备注</string>
    <string name="complete">完成</string>
    <string name="topic_title">拥 抱 每 一 种 生 活</string>
    <string name="add">+</string>
    <string name="today_no_bill">您今天还没有记账</string>
    <string name="month_no_bill">您这个月没有记账</string>
    <string name="log_up">注册</string>
    <string name="log_in">登录</string>
    <string name="please_input_password">请输入您的密码</string>
    <string name="please_input_username">请输入您的用户名</string>
    <string name="account_remove">注销</string>
    <string name="remember_password">记住密码</string>
    <string name="reset_password">修改密码</string>
    <string name="expend_detail">支出明细</string>
    <string name="time_name">时间:</string>
    <string name="cancel">取消</string>
    <string name="please_input_checked">请确认您的密码</string>
    <string name="finish">确定</string>
    <string name="please_input_old_password">请输入您的旧密码</string>
    <string name="please_input_new_password">请确认您的新密码</string>
    <string name="please_log_in_en">Please log in</string>
    <string name="please_log_in_cn">请先登录</string>
    <string name="welcome_log_in">您好，登录成功</string>
    <string name="back_to_bill">返回主页</string>
    <string name="log_out">退出登录</string>
</resources>