<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="150dp"
    android:text="@string/welcome_log_in"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textSize="30sp" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:id="@+id/response_id"
    android:textSize="25sp"
    android:layout_marginTop="200dp" />

  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/textView"
    android:layout_marginEnd="-11dp"
    android:layout_marginLeft="11dp"
    android:layout_marginRight="-11dp"
    android:layout_marginStart="11dp"
    android:layout_marginTop="200dp"
    android:backgroundTint="#2415F3"
    android:onClick="backToSetting"
    android:text="@string/back_to_bill"
    android:textColor="#ffffff"
    android:textSize="20sp" />

  <Button
    android:id="@+id/returnback"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/textView"
    android:layout_marginEnd="-11dp"
    android:layout_marginLeft="11dp"
    android:layout_marginRight="-11dp"
    android:layout_marginStart="11dp"
    android:layout_marginTop="277dp"
    android:backgroundTint="#d95b5b"
    android:onClick="backToLogin"
    android:text="@string/log_out"
    android:textColor="#ffffff"
    android:textSize="20sp" />

</RelativeLayout>